--- a/microservice-consumer-movie/src/main/resources/application.yml
+++ b/microservice-consumer-movie/src/main/resources/application.yml
@@ -43,4 +43,5 @@ logging:
     org.hibernate: INFO
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     org.hibernate.type.descriptor.sql.BasicExtractor: TRACE
-    org.springframework.cloud.commons.util.InetUtils: TRACE   # 开启这边的日志，可以打印出Spring查找网卡的过程
+    org.springframework.cloud.commons.util.InetUtils: TRACE
+  file: \log\movie.log
