hystrix dashboard , turbine

--- a/microservice-consumer-movie/src/main/resources/application.yml
+++ b/microservice-consumer-movie/src/main/resources/application.yml
@@ -4,6 +4,9 @@ security:
   user:
     name: user
     password: 123456
+  ignored:
+    - /hystrix.stream
+    - /turbine.stream
 management:
   security:
     enabled: true
