--- a/microservice-consumer-movie-feign/src/main/resources/application.yml
+++ b/microservice-consumer-movie-feign/src/main/resources/application.yml
@@ -4,6 +4,9 @@ security:
   user:
     name: user
     password: 123456
+  ignored:
+    - /hystrix.stream
+    - /turbine.stream
 management:
   security:
     enabled: true
@@ -17,7 +20,7 @@ info:
       target: @java.version@
 spring:
   application:
-    name: microservice-consumer-movie
+    name: microservice-consumer-movie-feign
   cloud:
     inetutils:
       ignored-interfaces:
