--- a/microservice-consumer-movie-ribbon-hystrix/src/main/resources/application.yml
+++ b/microservice-consumer-movie-ribbon-hystrix/src/main/resources/application.yml
@@ -4,9 +4,11 @@ security:
   user:
     name: user
     password: 123456
+  basic:
+    enabled: false
 management:
   security:
-    enabled: true
+    enabled: false
     roles: ADMIN
 info:
   app:
