聚合微服务

--- a/microservice-consumer-movie/src/main/resources/application.yml
+++ b/microservice-consumer-movie/src/main/resources/application.yml
@@ -7,6 +7,8 @@ security:
   ignored:
     - /hystrix.stream
     - /turbine.stream
+  basic:
+    enabled: false
 management:
   security:
     enabled: true
