--- a/microservice-gateway-zuul-aggregation/src/main/resources/application.yml
+++ b/microservice-gateway-zuul-aggregation/src/main/resources/application.yml
@@ -2,14 +2,14 @@ spring:
   application:
     name: microservice-gateway-zuul-aggregation
 server:
-  port: 8040
+  port: 8001
 management:
   security:
     enabled: false
 eureka:
   client:
     service-url:
-      defaultZone: http://user:123456@localhost:8070/eureka
+      defaultZone: http://user:123456@discovery:8070/eureka
   instance:
     prefer-ip-address: true
 logging:
