--- a/microservice-hystrix-dashboard/src/main/resources/application.yml
+++ b/microservice-hystrix-dashboard/src/main/resources/application.yml
@@ -1,12 +1,14 @@
 server:
-  port: 8090
+  port: 8101
 security:
   user:
     name: user
     password: 123456
+  basic:
+    enabled: false
 management:
   security:
-    enabled: true
+    enabled: false
     roles: ADMIN
 info:
   app:
@@ -18,17 +20,17 @@ info:
 spring:
   application:
     name: microservice-hystric-dashboard
-  cloud:
-    inetutils:
-      ignored-interfaces:
-        - docker0
-        - veth.*
+#  cloud:
+#    inetutils:
+#      ignored-interfaces:
+#        - docker0
+#        - veth.*
 
 eureka:
   client:
     service-url:
 #      defaultZone: http://user:123456@peer1:8071/eureka/,http://user:123456@peer2:8072/eureka/
-      defaultZone: http://user:123456@localhost:8070/eureka/
+      defaultZone: http://user:123456@discovery:8070/eureka/
     healthcheck:
       enabled: true
   instance:
