--- a/microservice-hystrix-turbine/src/main/resources/application.yml
+++ b/microservice-hystrix-turbine/src/main/resources/application.yml
@@ -9,7 +9,7 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://user:123456@localhost:8070/eureka
+      defaultZone: http://user:123456@discovery:8070/eureka
 logging:
   level:
     root: INFO
