--- a/microservice-provider-user/Dockerfile
+++ b/microservice-provider-user/Dockerfile
@@ -2,10 +2,12 @@ FROM openjdk:8u151-alpine3.7
 
 MAINTAINER wangyang
 
+ENV PORT=8080
+
 VOLUME /tmp
 
 COPY ./target/*.jar /app.jar
 
-EXPOSE 8081
+EXPOSE 8080
 
 ENTRYPOINT ["java","-Djava.security.egd=/dev/./urandom","-jar","/app.jar"]
