--- a/microservice-provider-user/src/main/resources/application.yml
+++ b/microservice-provider-user/src/main/resources/application.yml
@@ -5,8 +5,8 @@ spring:
   #忽略指定名称的网卡
     inetutils:
       #使用正则表达式，指定使用的网络地址
-      preferred-networks:
-        - 192.168
+#      preferred-networks:
+#        - 192.168
       #ignored-interfaces:
       #   - docker0
       #   - verth.*
@@ -51,7 +51,7 @@ eureka:
   client:
     service-url:
 #      defaultZone: http://user:123456@peer1:8071/eureka/,http://user:123456@peer2:8072/eureka/
-      defaultZone: http://user:123456@localhost:8070/eureka/
+      defaultZone: http://user:123456@discovery:8070/eureka/
     healthcheck:
       enabled: true
 
