--- a/microservice-discovery-eureka-authenticating/Dockerfile
+++ b/microservice-discovery-eureka-authenticating/Dockerfile
@@ -6,6 +6,6 @@ VOLUME /tmp
 
 COPY ./target/*.jar /app.jar
 
-EXPOSE 8070
+EXPOSE  ${PORT}
 
 ENTRYPOINT ["java","-Djava.security.egd=/dev/./urandom","-jar","/app.jar"]
