--- a/microservice-provider-user/src/main/resources/application.yml
+++ b/microservice-provider-user/src/main/resources/application.yml
@@ -50,8 +50,8 @@ info:
 eureka:
   client:
     service-url:
-#      defaultZone: http://user:123456@peer1:8071/eureka/,http://user:123456@peer2:8072/eureka/
-      defaultZone: http://user:123456@discovery:8070/eureka/
+      defaultZone: http://user:123456@${HOST1}:8071/eureka/,http://user:123456@${HOST2}:8072/eureka/
+#      defaultZone: http://user:123456@discovery:8070/eureka/
     healthcheck:
       enabled: true
 
